# amphigory

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.amphigory.yaml  pyproject.toml  requirements.txt
.claude/: settings.local.json
config/: logging.yaml
config/presets/: Blu Ray - H.265 Apple VTB 1080p FR SAS All Tracks.json  DVD - H.265 720p:5.1 FRSAS All Tracks.json  UHD 4K - H.265 Apple VTB 2160p FR SAS All Tracks.json  presets.yaml
daemon/: BUILD.md  pyproject.toml  setup.py
daemon/resources/: AppIcon.icns  com.amphigory.daemon.plist
daemon/scripts/: build_app.sh  generate_app_icon.py  generate_icons.py
daemon/src/amphigory_daemon/: __init__.py  _version.py  classifier.py  config.py  dialogs.py  disc.py  discovery.py  drive.py  fingerprint.py  icons.py  main.py  makemkv.py  models.py  tasks.py  websocket.py
daemon/tests/: __init__.py  test_classifier.py  test_config.py  test_dialogs.py  test_disc.py  test_discovery.py  test_drive.py  test_fingerprint.py  test_icons.py  test_main.py  test_makemkv.py  test_models.py  test_tasks.py  test_websocket.py
docs/: Optical Media Classification Research Report.md
docs/plans/: 2024-12-24-optical-drive-model-refactor.md  2024-12-24-phase1-disc-detection-fixes.md  future-tv-show-support.md  (+26 more)
shared/: pyproject.toml
shared/amphigory_tasks/: __init__.py  queue.py
shared/tests/: test_queue.py
tests/: conftest.py  test_cleanup_api.py  test_common.py  test_database.py  test_disc_api.py  test_disc_page.py  test_disc_repository.py  test_drives_api.py  test_integration.py  test_job_runner.py  test_jobs.py  test_library_api.py  test_main.py  test_makemkv.py  test_naming.py  test_pipeline.py  test_preset_selector.py  test_presets.py  test_presets_api.py  test_resume_flow.py  test_ripper.py  test_settings_api.py  test_task_processor.py  test_task_workflow.py  test_tasks_api.py  test_tmdb.py  test_transcoder.py
(+40 files in other folders)
