[project]
name = "amphigory-tasks"
version = "0.1.0"
description = "Shared task queue library for Amphigory"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amphigory_tasks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
